--- a/templates/current_time.html
+++ b/templates/current_time.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
 
-{% block current_time %}
-  <p>{{ current_time }}</p>
+{% block content %}
+  <p>Сейчас {{ current_time }}</p>
 {% endblock %}
