--- a/templates/base.html
+++ b/templates/base.html
@@ -4,33 +4,35 @@
   <head>
     <meta charset="utf-8">
     <link href="https://fonts.googleapis.com/css?family=PT+Serif" rel="stylesheet">
-    <title>Messages</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <title>Messages4Friends</title>
   </head>
   <body>
+      <nav class="navbar navbar-default">
+        <div class="container">
+          <div class="navbar-header">
+            <a class="navbar-brand" href="{% url 'me' %}">Me</a>
+            <a class="navbar-brand" href="{% url 'current_time' %}">Current time</a>
+            <a class="navbar-brand" href="{% url 'you' %}">You</a>
+          </div>
+        </div>
+      </nav>
 
-    <nav>
-      <a href="{% url 'me' %}">Me</a>
-      <a href="{% url 'current_time' %}">Current time</a>
-      <!--<a href=">You</a> -->
-      <!--<a href="hello_world>Hello, world"</a>-->
-    </nav>
     <p></p>
-
-    <div>
-
-      {% block hello_world %}
-      {% endblock %}
-
-      {% block current_time %}
-      {% endblock %}
-
-      {% block me %}
-      {% endblock %}
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-8 blog-main">
+          <div class="blog-post">
 
       {% block content %}
       {% endblock %}
 
+          </div>
+        </div>
+      </div>
     </div>
-
-  </body>
-</html>
+    <!--<footer class="blog-footer">
+      <p>2018</p>
+    </footer>-->
+    </body>
+  </html>
