--- a/templates/base.html
+++ b/templates/base.html
@@ -3,9 +3,10 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link href="https://fonts.googleapis.com/css?family=PT+Serif" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <title>Messages4Friends</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT+Serif">
+    <link rel="stylesheet" href="{% static "css/messages_for_friends.css" %}">
+    <title>{% block title %}Messages4Friends{% endblock %}</title>
   </head>
   <body>
       <nav class="navbar navbar-default">
