--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,7 @@
           <div class="navbar-header">
             <a class="navbar-brand" href="{% url 'me' %}">Me</a>
             <a class="navbar-brand" href="{% url 'current_time' %}">Current time</a>
-            <a class="navbar-brand" href="{% url 'you' %}">You</a>
+            <a class="navbar-brand" href="{% url 'friends' %}">Friends</a>
           </div>
         </div>
       </nav>
