--- a/templates/friends.html
+++ b/templates/friends.html
@@ -2,16 +2,17 @@
 
 {% block content %}
 <div class="blog-header">
-  <h1 class="blog-title">Me</h1>
-  <p class="lead-blog-description">Пишу обо всём что придёт в голову головушку<p>
+  <h1 class="blog-title">Friends</h1>
+  <p class="lead-blog-description">Друзьяшки пишут<p>
 </div>
 {% for message in messages %}
 <div>
-  <h2 class="blog-post-tile"><a href="{% url 'me_message_detail' pk=message.id %}">{{ message.name }}</a></h2>
+  <h2 class="blog-post-tile"><a href="{% url 'friends_message_detail' pk=message.id %}">{{ message.name }}</a></h2>
   <p>{{ message.text }}</p>
   <p class="blog-post meta">{{ message.publish_date }}
   <br/>
   Автор: {{ message.author }}</p>
+</div>
 <hr>
 {% endfor %}
 {% endblock %}
