--- a/templates/base.html
+++ b/templates/base.html
@@ -3,27 +3,56 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">-->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT+Serif">
     <link rel="stylesheet" href="{% static "css/messages_for_friends.css" %}">
     <title>{% block title %}Messages4Friends{% endblock %}</title>
+    {% block stylesheet %} {% endblock %}
   </head>
   <body>
-      <nav class="navbar navbar-default">
+    {% block body %}
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
           <div class="navbar-header">
             <a class="navbar-brand" href="{% url 'me' %}">Me</a>
             <a class="navbar-brand" href="{% url 'current_time' %}">Current time</a>
             <a class="navbar-brand" href="{% url 'friends' %}">Friends</a>
           </div>
+          <div class="collapse navbar-collapse" id="mainMenu">
+            {% if user.is_authenticated %}
+            <ul class="navbar-nav ml-auto">
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="userMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                {{ user.username }}
+                </a>
+                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userMenu">
+                  <a class="dropdown-item" href="#">My account</a>
+                  <a class="dropdown-item" href="#">Change password</a>
+                    <div class="dropdown-divider"></div>
+                  <a class="dropdown-item" href="{% url 'logout' %}">Log out</a>
+                </div>
+               </li>
+              </ul>
+              {% else %}
+              <form class="form-inline ml-auto">
+                <a href="{% url 'login' %}" class="btn btn-outline-secondary">Log in</a>
+                <a href="{% url 'signup' %}" class="btn btn-primary ml-2">Sign up</a>
+              </form>
+              {% endif %}
+            </div>
+          </div>
         </div>
       </nav>
-
+      {% block breadcrumb %}
+      {% endblock %}
     <p></p>
     <div class="container">
       <div class="row">
         <div class="col-sm-8 blog-main">
           <div class="blog-post">
+
+
 
       {% block content %}
       {% endblock %}
@@ -32,8 +61,12 @@
         </div>
       </div>
     </div>
+    {% endblock body %}
     <!--<footer class="blog-footer">
       <p>2018</p>
     </footer>-->
+    <script src="{% static 'js/jquery-3.2.1.min.js' %}"></script>
+    <script src="{% static 'js/popper.min.js' %}"></script>
+    <script src="{% static 'js/bootstrap.min.js' %}"></script>
     </body>
   </html>
