--- a/templates/friends_new_message.html
+++ b/templates/friends_new_message.html
@@ -1,16 +1,19 @@
 {% extends "base.html" %}
+{% load widget_tweaks %}
 
 {% block content %}
-<form method="post">
+<form method="post" novalidate>
   {% csrf_token %}
-  <div class="form-group">
+  <!--<div class="form-group">
     <label for="id_name">Name of the Message</label>
     <input type="text" class="form-control" id="id_name" name="name">
   </div>
   <div class="form-group">
     <label for="id_message">Message</label>
     <textarea type="text" class="form-control" id="id_text" name="message" rows=13></textarea>
-  </div>
+  </div>-->
+  {% include "includes/form.html" %}
+
   <button type="submit" class="btn btn-success">Submit</button>
 </form>
 {% endblock %}
