fixed template button

--- a/templates/friends.html
+++ b/templates/friends.html
@@ -6,7 +6,7 @@
   <p class="lead-blog-description">Друзьяшки пишут<p>
 </div>
 <div class="mb-4">
-  <a href="{% url 'friends_new_message' %}" class="btn btn-primary">New massage</a>
+  <a href="{% url 'friends_new_message' %}" class="btn btn-primary">New message</a>
 </div>
 {% for message in messages %}
 <div>
